# CREPE

./: .gitignore  AUTHORS  CMakeLists.txt  CREPE.sln  README.md
CREPE/: CREPE.filters  CREPE.vcxproj  CREPE.vcxproj.filters  chessman.cc  chessman.hh  crepe.cc  crepe.hh  cuda_tools.cuh  database_handler.cc  database_handler.hh  edgelinking.cu  edgelinking.cuh  edgethinning.cu  edgethinning.cuh  filter_handler.cc  filter_handler.hh  filters.cc  filters.cu  filters.cuh  filters.hh  fourier_descriptor.cc  fourier_descriptor.cu  fourier_descriptor.cuh  fourier_descriptor.hh  gl_window.ui  gui_gl_widget.cc  gui_gl_widget.hh  gui_gl_window.cc  gui_gl_window.hh  main.cc  mycannyfilter.cc  mycannyfilter.cu  mycannyfilter.cuh  mycannyfilter.hh  setup_window.cc  setup_window.hh  setup_window.ui  tools.cc  tools.hh  zhangsuenthinning.cu
sample/: video_sample.avi  video_sample1.wmv  video_sample2.avi  video_sample2.wmv
src/: chessman.cc  chessman.hh  crepe.cc  crepe.hh  database_handler.cc  database_handler.hh  filter_handler.cc  filters.cc  filters.cu  filters.cuh  filters.hh  fourier_descriptor.cu  fourier_descriptor.cuh  fourier_descriptor.hh  main.cc  setup_window.hh  zhangsuenthinning.cuh
